@@ -1,3 +1,8 @@
+2016-09-15  Jimmy Petersson  <jimmy@molflow.com>
+
+	* runscript.m: Close all files before exit.
+	* runscript.m: Add support for no target credentials.
+
 2016-09-09  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Mscripts_arts/q2_inv.m (subfun4l2): Removed scaling to vmr/vmr
